--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
+    "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.7",
     "vue-router": "^3.0.1"
