--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "validator": "^10.4.0",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.7",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
